--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,4 +19,3 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run test
-    - run: npm run deploy
