--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"homepage": "http://n2dev.github.io/mojibi",
-	"name": "kotobi",
+	"name": "mojibi",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
@@ -18,6 +18,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-scripts": "^5.0.1",
+		"recharts": "^2.5.0",
 		"sanitize.css": "^13.0.0",
 		"typescript": "^4.7.4",
 		"web-vitals": "^2.1.4"
